<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/log_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <com.zxm.utils.core.widget.loginfo.LogTitleBar
            android:id="@+id/dokit_title_bar"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_alignParentTop="true"
            app:dkBack="@string/dk_kit_log_min"
            app:dkIcon="@drawable/dk_close_icon"
            app:dkTitle="@string/dk_kit_log_info" />

        <View
            android:id="@+id/view_divider"
            style="@style/ThemeCore.Shadow.Bottom"
            android:layout_below="@id/dokit_title_bar" />

        <EditText
            android:id="@+id/log_filter"
            style="@style/ThemeCore.Input"
            android:layout_height="50dp"
            android:layout_below="@id/view_divider"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/dk_log_filter_background"
            android:elevation="1dp"
            android:hint="@string/dk_log_info_edt_hint"
            android:inputType="text"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <LinearLayout
            android:id="@+id/button_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_filter"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/verbose"
                    style="@style/ThemeCore.RadioButton.Left"
                    android:text="@string/dk_log_info_verbose" />

                <RadioButton
                    android:id="@+id/debug"
                    style="@style/ThemeCore.RadioButton"
                    android:text="@string/dk_log_info_debug" />

                <RadioButton
                    android:id="@+id/info"
                    style="@style/ThemeCore.RadioButton"
                    android:text="@string/dk_log_info_info" />

                <RadioButton
                    android:id="@+id/warn"
                    style="@style/ThemeCore.RadioButton"
                    android:text="@string/dk_log_info_warn" />

                <RadioButton
                    android:id="@+id/error"
                    style="@style/ThemeCore.RadioButton.Right"
                    android:text="@string/dk_log_info_error" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_clean"
                    style="@style/ThemeCore.RadioButton.Left"
                    android:text="@string/dk_log_btn_clean" />

                <Button
                    android:id="@+id/btn_export"
                    style="@style/ThemeCore.RadioButton.middle"
                    android:text="@string/dk_log_btn_export" />

                <Button
                    android:id="@+id/btn_top"
                    style="@style/ThemeCore.RadioButton.middle"
                    android:text="@string/dk_log_btn_back_top" />

                <Button
                    android:id="@+id/btn_bottom"
                    style="@style/ThemeCore.RadioButton.Right"
                    android:text="@string/dk_log_btn_to_bottom" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/dk_log_text_loading"
                android:textColor="#666666"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/log_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_loading"
            android:layout_below="@id/button_wrap"
            android:scrollbars="vertical"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout_log_hint"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_log_hint_bg">

            <RelativeLayout
                android:id="@+id/layout_log_hint_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_log_hint_title_bg"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_log_hint_bar"
                    android:layout_width="30dp"
                    android:layout_height="3dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_log_hint_bar_bg" />

                <ImageView
                    android:id="@+id/iv_log_hint_close"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_panel_close"
                    app:tint="#ffffff" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_log_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="#FFC107"
                android:textSize="10sp"
                android:minHeight="40dp"
                android:maxHeight="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_log_hint_title"
                tools:ignore="SmallSp"
                tools:text="@string/dk_kit_log_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>